; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/serial/extr_io_ti.c_stop_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/serial/extr_io_ti.c_stop_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.edgeport_port = type { i64, i32, i32 }

@EDGE_READ_URB_RUNNING = common dso_local global i64 0, align 8
@EDGE_READ_URB_STOPPING = common dso_local global i64 0, align 8
@MCR_RTS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.edgeport_port*)* @stop_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stop_read(%struct.edgeport_port* %0) #0 {
  %2 = alloca %struct.edgeport_port*, align 8
  %3 = alloca i64, align 8
  store %struct.edgeport_port* %0, %struct.edgeport_port** %2, align 8
  %4 = load %struct.edgeport_port*, %struct.edgeport_port** %2, align 8
  %5 = getelementptr inbounds %struct.edgeport_port, %struct.edgeport_port* %4, i32 0, i32 1
  %6 = load i64, i64* %3, align 8
  %7 = call i32 @spin_lock_irqsave(i32* %5, i64 %6)
  %8 = load %struct.edgeport_port*, %struct.edgeport_port** %2, align 8
  %9 = getelementptr inbounds %struct.edgeport_port, %struct.edgeport_port* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @EDGE_READ_URB_RUNNING, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %17

13:                                               ; preds = %1
  %14 = load i64, i64* @EDGE_READ_URB_STOPPING, align 8
  %15 = load %struct.edgeport_port*, %struct.edgeport_port** %2, align 8
  %16 = getelementptr inbounds %struct.edgeport_port, %struct.edgeport_port* %15, i32 0, i32 0
  store i64 %14, i64* %16, align 8
  br label %17

17:                                               ; preds = %13, %1
  %18 = load i32, i32* @MCR_RTS, align 4
  %19 = xor i32 %18, -1
  %20 = load %struct.edgeport_port*, %struct.edgeport_port** %2, align 8
  %21 = getelementptr inbounds %struct.edgeport_port, %struct.edgeport_port* %20, i32 0, i32 2
  %22 = load i32, i32* %21, align 4
  %23 = and i32 %22, %19
  store i32 %23, i32* %21, align 4
  %24 = load %struct.edgeport_port*, %struct.edgeport_port** %2, align 8
  %25 = getelementptr inbounds %struct.edgeport_port, %struct.edgeport_port* %24, i32 0, i32 1
  %26 = load i64, i64* %3, align 8
  %27 = call i32 @spin_unlock_irqrestore(i32* %25, i64 %26)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
